--- a/archive/templates/archivedetail.html
+++ b/archive/templates/archivedetail.html
@@ -1,9 +1,9 @@
-<p1>Detail page 입니다.</p1>
+<h1>Detail page 입니다.</h1>
 
 <div class="container">
     <h1>{{archive.title}}</h1>
     <p>{{archive.pub_date}}</p>
     <p>{{archive.date}}</p>
     <p>{{archive.b_summary}}</p>
-    <p1><a href="{% url 'home' %}"> 돌아가기</a></p1>
+    <p1><a href="{% url 'archivemain' %}"> 돌아가기</a></p1>
 </div>
