--- a/archive/templates/home.html
+++ b/archive/templates/home.html
@@ -1,3 +1,20 @@
-<h1>homepage 입니다.</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FroGrowth</title>
+    <link rel="stylesheet" href="./home.css" type="text/css">
+</head>
+<body>
+    <div class="logo_bar"><a href="{% url 'home' %}">FroGrowth</a></div>
+    <div class="nav_bar">
+            <a class="nav-item nav-link" href="{% url 'home' %}">HOME</a>
+            <a class="nav-item nav-link" href="{% url 'about' %}">ABOUT</a>
+            <a class="nav-item nav-link" href="{% url 'archivemain' %}">ARCHIVE</a>
+    </div>  
 
-<!--p1><a href="{% url 'home'%}"> Archive 바로가기</a></p1>
+    <h1>homepage 입니다.</h1>
+
+</body>
+</html>
